SERVER-46937 Aggregation stage serverStatus counters incorrectly count update pipelines